--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
-    android:background="@color/green">
+    android:background="@color/green"
+    tools:context=".LoginActivity">
+
+
 
 
     <com.google.android.material.button.MaterialButton
@@ -35,6 +37,7 @@
         android:layout_height="500dp"
         android:layout_marginBottom="97dp"
         android:background="?android:colorBackground"
+        android:backgroundTint="@color/green"
         android:foregroundGravity="top"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,9 +47,17 @@
         app:layout_constraintVertical_bias="0.76"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:lottie_rawRes="@raw/studentwithbooks"
-        android:backgroundTint="@color/green"
-        />
+        app:lottie_rawRes="@raw/studentwithbooks" />
+
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/textView"
