--- a/app/src/main/res/layout/activity_request_issue_recieved.xml
+++ b/app/src/main/res/layout/activity_request_issue_recieved.xml
@@ -8,14 +8,15 @@
     tools:context=".RequestIssueRecievedActivity">
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:fontFamily="casual"
         android:text="Library Management"
         android:textColor="@color/DarkGreen"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,5 +30,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="visible"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
