--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="Red">#C60101</color>
     <color name="greeyLight">#525554</color>
     <color name="lightBlue">#056D8C</color>
+    <color name="lightRed">#C8665F</color>
 
 </resources>
